--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Login to Docker Hub
         users: docker/login-action@v1
         with:
-          username: ${{secrets.DOCKER_USER}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
-      - name: checkout
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout
         uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
